--- a/public/index.html
+++ b/public/index.html
@@ -484,7 +484,7 @@
           <input v-model="pass" type="text" class="form-control" >
         </div>
         <div class="text-center">
-          <button type="button" v-on:click="Login" class="customeBtn" style="font-size: 25px;">
+          <button id="btnLogin" type="button" v-on:click="Login" class="customeBtn" style="font-size: 25px;">
           Login
         </button>
         </div>
