--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
     .customeBtn {
       background: #56042c;
       color: white;
-      padding: 4px 4em;
+      padding: 4px 1em;
       border-radius: 8px;
       border: 1.5px solid #Fec310;
-      width: 13em;
+      width: 9em;
       margin: 20px 0px;
     }
 
@@ -498,7 +498,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"></script>
-
+      <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/app.js"></script>
 </body>
 
